# system-solver-test

./: CMakeLists.txt  README.md  matA.txt  vecX.txt
googletest/x64/Debug/: gtest_maind.lib
googletest/x64/Release/: gtest_main.lib
src/: CMakeLists.txt  Main.cpp  Matrix.h  MatrixDense.h  MatrixReader.cpp  MatrixReader.h  MatrixSparse.h  MatrixWriter.cpp  MatrixWriter.h
src/test/: CMakeLists.txt  MatrixReaderTest.cpp
